handle sonar issues